--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -30,6 +30,7 @@
             <!--<a href="#email"><span class="white-text email">South High Community School</span></a>-->
         </div></li>
         <li><div class="divider"></div></li>
+        <li><a class="waves-effect" href="/soles"><i class="material-icons">format_list_bulleted</i>My SOLEs</a></li>
         <li><a class="waves-effect" href="/questions"><i class="material-icons">help</i>Explore Questions</a></li>
         <li><a class="waves-effect" href="/questions/add"><i class="material-icons">create</i>Add a Question</a></li>
         <li><a class="waves-effect" href="/resources"><i class="material-icons">assignment</i>Explore Resources<span class="new badge">4</span></a></li>
@@ -37,9 +38,9 @@
         <li><a class="waves-effect" href="/how" ><i class="material-icons">record_voice_over</i>How to SOLE</a></li>
         <li><a class="waves-effect" href="/history" ><i class="material-icons">history</i>History of StartSOLE</a></li>
         <li><a class="waves-effect" href="/profile"><i class="material-icons">account_circle</i>Profile</a></li>
-        <li><a class="waves-effect" href="/soles"><i class="material-icons">format_list_bulleted</i>Your SOLEs</a></li>
+
         <li><div class="divider"></div></li>
-        <li><a class="waves-effect" href="/sole-create"><i class="material-icons">add</i>Plan A Lesson</a></li>
+        <li><a class="waves-effect waves-light btn" href="/sole-create">Plan Lesson</a></li>
         <li><div class="divider"></div></li>
         <li>
             <div class="app-download-links">
