add a profile convenience controller to cloud code and use it here

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -11,6 +11,10 @@
     <td>{{schoolName}}</td>
   </tr>
   <tr>
+    <td>Email:</td>
+    <td>{{emailAddress}}</td>
+  </tr>
+  <tr>
     <td>Points Earned:</td>
     <td>{{pointsEarned}}</td>
   </tr>
