package.json update, history card update, partial sample (ifEquals)

--- a/views/history.hbs
+++ b/views/history.hbs
@@ -1,5 +1,9 @@
 <a href="/">Home</a> > <strong>History of StartSOLE</strong><br>
 
+<div class="row">
+    <div class="col s12">
+        <div class="card-panel">
+
 		  <div class="row">
 			<div class="col m12 l10">
 			<h4>What is SOLE?</h4>
@@ -136,4 +140,7 @@
 			  </div>
 			</div>
 		  </div>
+        </div>
+    </div>
+</div>
 
