--- a/views/partials/sole-card.hbs
+++ b/views/partials/sole-card.hbs
@@ -24,6 +24,9 @@
         </span>
     </div>
     <div class="sole-action-buttons">
+    {{#ifEquals state "planned"}}
+            Your HTML here
+        {{/ifEquals}}
         <a class="waves-effect waves-light green btn">
             Download Plan
         </a>
