--- a/views/soles-single.hbs
+++ b/views/soles-single.hbs
@@ -1,6 +1,6 @@
 <a href="/">Home</a> > <a href="/soles">Your SOLEs</a> > <strong>{{sole.question.text}}</strong><br>
 
-{{#if sole.sole}}
+{{#if sole}}
 
 <h1>{{sole.question.text}}</h1>
 
