init cleanup, breadcrumb css fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,23 @@ nav .brand-logo {
 .sidenav span.badge {
     position: absolute;
 }
+
+.breadcrumb-wrapper{
+    position: fixed;
+    top: 21px;
+    margin-left: 20px;
+    z-index: 998;
+}
+
+a.breadcrumb {
+    color: #212121 !important;
+}
+
+a.breadcrumb::before {
+    color: #212121 !important;
+    margin-top: -5px;
+}
+
 .brand-logo {
     padding-right: 10px !important;
     font-size: 20px !important;
