--- a/views/how-to-sole.hbs
+++ b/views/how-to-sole.hbs
@@ -1,12 +1,14 @@
-<a href="/">Home</a> > <strong>How to SOLE</strong><br>
+<div class="breadcrumb-wrapper">
+    <a href="/" class="breadcrumb">Home</a>
+    <a class="breadcrumb">How to SOLE</a>
+</div>
 
 <div class="row">
     <div class="col s12">
         <div class="card-panel">
-
             <div class="row">
                 <div class="col m12 l10">
-                    <h4>How to SOLE</h4>
+                    <br>
                     <a name="videoPlayer"></a>
                     <div class="video-container z-depth-3 no-controls">
                         <div id="video"></div>
