--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,4 +1,7 @@
-<a href="/">Home</a> > <strong>Your Profile</strong><br>
+<div class="breadcrumb-wrapper">
+    <a href="/" class="breadcrumb">Home</a>
+    <a class="breadcrumb">My Profile</a>
+</div>
 
 <h1>Your Profile</h1>
 <table>
