--- a/views/questions-add.hbs
+++ b/views/questions-add.hbs
@@ -1,4 +1,9 @@
-<a href="/">Home</a> > <a href="/questions">Questions</a> > <strong>Add New</strong><br>
+<div class="breadcrumb-wrapper">
+    <a href="/" class="breadcrumb">Home</a>
+    <a href="/questions" class="breadcrumb">Questions</a>
+    <a class="breadcrumb">Add New</a>
+</div>
+
 
 <div class="row" style="padding-top:50px;">
     <div class="col s12 offset-m1 m10 offset-l3 l6">
@@ -20,7 +25,7 @@
                     <div class="row">
                         <div class="input-field col s12 center">
                             <button class="btn waves-effect waves-light">
-                                Submit <span ng-show="Submit.submitted_one">Another</span> Question
+                                Submit Question
                             </button>
                         </div>
                     </div>
