--- a/views/questions.hbs
+++ b/views/questions.hbs
@@ -1,4 +1,7 @@
-<a href="/">Home</a> > <strong>Explore Questions</strong><br>
+<div class="breadcrumb-wrapper">
+    <a href="/" class="breadcrumb">Home</a>
+    <a class="breadcrumb">Explore Questions</a>
+</div>
 
 <div class="row" style="padding-top:20px;">
 	<div class="col offset-s10 s2 offset-m9 m3 offset-l8 l4">
