--- a/views/map.hbs
+++ b/views/map.hbs
@@ -1,3 +1,6 @@
-<a href="/">Home</a> > <strong>Community Map</strong><br>
+<div class="breadcrumb-wrapper">
+    <a href="/" class="breadcrumb">Home</a>
+    <a class="breadcrumb">Map</a>
+</div>
 
 <h1>Map page!</h1>
