--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -5,13 +5,18 @@
 <!--JavaScript at end of body for optimized loading-->
 <script type="text/javascript" src="/js/materialize.min.js"></script>
 <script type="text/javascript" src="/js/app.js"></script>
+<script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
+<script src="js/masonry.pkgd.min.js"></script>
+<script type="text/javascript" src="/js/galleryExpand.js"></script>
+<script type="text/javascript" src="/js/init.js"></script>
 
 <script>
     document.addEventListener('DOMContentLoaded', function() {
-        var elems = document.querySelectorAll('.sidenav');
-        M.Sidenav.init(elems);
+        initSideNav();
+        initPushPin();
+        initScrollSpy();
+        initTabs();
+        initDatePicker();
     });
-    initPushPin();
-    initScrollSpy();
-    initTabs();
+
 </script>
