--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -1,22 +1,19 @@
 <header>
-    <nav class="white z-depth-0">
-        <a href="#" class="brand-logo right grey-text darken-4">
-            <!--<img src="/images/logo.png">-->
-            <i class="material-icons">exit_to_app</i> logout
-        </a>
-        <a href="#" data-target="slide-out"
-           class="sidenav-trigger"><i class="material-icons teal-text lighten-2">menu</i></a>
-    </nav>
-    <!--<nav>-->
-        <!--<div class="nav-wrapper white z-depth-0">-->
+    <div class="navbar-fixed">
+        <nav class="white z-depth-0">
 
-            <!--<ul id="nav-mobile" class="left hide-on-med-and-down">-->
-                <!--<li><a href="sass.html">Sass</a></li>-->
-                <!--<li><a href="badges.html">Components</a></li>-->
-                <!--<li><a href="collapsible.html">JavaScript</a></li>-->
-            <!--</ul>-->
-        <!--</div>-->
-    <!--</nav>-->
+            <a href="#" class="brand-logo right grey-text darken-4">
+                <!--<img src="/images/logo.png">-->
+                <i class="material-icons">exit_to_app</i> logout
+            </a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="sass.html">Sass</a></li>
+                <li><a href="badges.html">Components</a></li>
+            </ul>
+            <a href="#" data-target="slide-out"
+               class="sidenav-trigger"><i class="material-icons teal-text lighten-2">menu</i></a>
+        </nav>
+    </div>
 
 
     <ul id="slide-out" class="sidenav sidenav-fixed">
@@ -50,11 +47,6 @@
                 </a>
             </div>
         </li>
-
-        <!--<li><a href="#!">Second Link</a></li>-->
-
-        <!--<li><a class="subheader">Subheader</a></li>-->
-        <!--<li><a class="waves-effect" href="#!">Third Link With Waves</a></li>-->
     </ul>
 
 </header>
