--- a/views/soles-add.hbs
+++ b/views/soles-add.hbs
@@ -7,13 +7,20 @@
 {{/if}}
 </strong> <br>
 
+<!--<div class="row">-->
+    <!--<div class="col s12">-->
+        <!--<div class="card-panel">-->
+            <!--<div class="row">-->
+                <!--<div class="col m12 l10">-->
+
+
 <div class="row">
-    <div class="col m12 l10 offset-l1">
+    <div class="col s12">
         <div class="card-panel">
             <h5>Create a SOLE Lesson Plan</h5>
             <form name="step1" class="body" novalidate>
                 <div class="row">
-                    <div class="input-field col s12 m6 l8">
+                    <div class="input-field col s12 m6 l12 xl8 offset-xl2">
                         <input id="question" name="question" type="text" required
                                class="validate"
                                value="{{sole.question.text}}">
