--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -3,8 +3,8 @@
         <nav class="white z-depth-0">
 
             <a href="#" class="brand-logo right grey-text darken-4">
-                <!--<img src="/images/logo.png">-->
-                <i class="material-icons">exit_to_app</i> logout
+                <img class="hide-on-small-only" src="/images/logos/logo.svg">
+                <!--<i class="material-icons">exit_to_app</i> logout-->
             </a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="sass.html">Sass</a></li>
