time picker init, logout on sidebar, breadcrumb sprinkling, single SOLE fix (WIP)

--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -35,6 +35,7 @@
         <li><a class="waves-effect" href="/how" ><i class="material-icons">record_voice_over</i>How to SOLE</a></li>
         <li><a class="waves-effect" href="/history" ><i class="material-icons">history</i>History of StartSOLE</a></li>
         <li><a class="waves-effect" href="/profile"><i class="material-icons">account_circle</i>Profile</a></li>
+        <li><a class="waves-effect" href="/"><i class="material-icons">exit_to_app</i>Logout</a></li>
 
         <li><div class="divider"></div></li>
         <li><a class="waves-effect waves-light btn" href="/sole-create">Plan Lesson</a></li>
