--- a/views/resources.hbs
+++ b/views/resources.hbs
@@ -1,4 +1,7 @@
-<a href="/">Home</a> > <strong>Resources</strong><br>
+<div class="breadcrumb-wrapper">
+    <a href="/" class="breadcrumb">Home</a>
+    <a class="breadcrumb">Resources</a>
+</div>
 
 <!-- Gallery -->
 <div id="portfolio" class="section gray">
