--- a/views/soles-single.hbs
+++ b/views/soles-single.hbs
@@ -1,4 +1,13 @@
-<a href="/">Home</a> > <a href="/soles">Your SOLEs</a> > <strong>{{sole.question.text}}</strong><br>
+<div class="breadcrumb-wrapper">
+    <a href="/" class="breadcrumb">Home</a>
+    <a href="/soles" class="breadcrumb">My SOLEs</a>
+    <a class="truncate truncate-question breadcrumb">Sample question text for a SOLE with a long question to test
+        the responsive nature of this class.</a>
+</div>
+
+
+
+<strong>{{sole.question.text}}</strong><br>
 
 {{#if sole}}
 
