--- a/views/soles.hbs
+++ b/views/soles.hbs
@@ -1,4 +1,8 @@
-<a href="/">Home</a> > <strong>Your SOLEs</strong><br>
+<div class="breadcrumb-wrapper">
+    <a href="/" class="breadcrumb">Home</a>
+    <a class="breadcrumb">My SOLEs</a>
+</div>
+
 
 <div class="row">
     <div class="col s12">
@@ -10,10 +14,15 @@
                             <a class="active" href="#planned">Planned{{#if planned}} ({{planned.length}}){{/if}}</a>
                         </li>
                         <li class="tab col s4 {{#unless reflect}}disabled{{/unless}}">
-                            <a href="#reflect">Reflect{{#if reflect}} ({{reflect.length}}){{/if}}</a>
+                            <a href="#reflect" {{#unless reflect}}onclick="M.toast({html: 'No SOLEs awaiting ' +
+                             'reflection'})"{{/unless}}>
+                                Reflect{{#if reflect}} ({{reflect.length}}){{/if}}
+                            </a>
                         </li>
                         <li class="tab col s4 {{#unless completed}}disabled{{/unless}}">
-                            <a href="#completed">Completed{{#if completed}} ({{completed.length}}){{/if}}</a>
+                            <a href="#completed" {{#unless completed}}onclick="M.toast({html: 'No SOLEs completed...yet'})"{{/unless}}>
+                                Completed{{#if completed}}({{completed.length}}){{/if}}
+                            </a>
                         </li>
                     </ul>
                 </div>
