--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -5,10 +5,10 @@
 <!--JavaScript at end of body for optimized loading-->
 <script type="text/javascript" src="/js/materialize.min.js"></script>
 <script type="text/javascript" src="/js/app.js"></script>
-<script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
-<script src="js/masonry.pkgd.min.js"></script>
-<script type="text/javascript" src="/js/galleryExpand.js"></script>
-<script type="text/javascript" src="/js/init.js"></script>
+<!--<script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>-->
+<!--<script src="js/masonry.pkgd.min.js"></script>-->
+<!--<script type="text/javascript" src="/js/galleryExpand.js"></script>-->
+<!--<script type="text/javascript" src="/js/init.js"></script>-->
 
 <script>
     document.addEventListener('DOMContentLoaded', function() {
@@ -18,6 +18,7 @@
         initTabs();
         initDatePicker();
         initTimePicker();
+        initSelect();
     });
 
 </script>
