--- a/views/questions.hbs
+++ b/views/questions.hbs
@@ -12,12 +12,12 @@
 	<div class="col s12 offset-m1 m10 offset-l3 l6">
 		<div class="card-panel" style="padding-bottom:inherit;margin-top: -30px;">
 
-			<form>
+			<form action="/questions" method="get">
 				<div class="row">
 					<h5 class="center-align" style="margin-bottom: 1em;">Explore Our Questions</h5>
 
 					<div class="input-field">
-						<input id="search" type="search"
+						<input id="search" name="q" type="search"
                                class="keep-bottom"
                                placeholder="Search by keyword">
                         <label class="no-transform" for="search"><i class="material-icons">search</i></label>
