--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -27,19 +27,22 @@
             <!--<a href="#email"><span class="white-text email">South High Community School</span></a>-->
         </div></li>
         <li><div class="divider"></div></li>
-        <li><a class="waves-effect" href="/soles"><i class="material-icons">format_list_bulleted</i>My SOLEs</a></li>
-        <li><a class="waves-effect" href="/questions"><i class="material-icons">help</i>Explore Questions</a></li>
-        <li><a class="waves-effect" href="/questions/add"><i class="material-icons">create</i>Add a Question</a></li>
-        <li><a class="waves-effect" href="/resources"><i class="material-icons">assignment</i>Explore Resources<span class="new badge">4</span></a></li>
-        <li><a class="waves-effect" href="/map"><i class="material-icons">public</i>Community Map</a></li>
-        <li><a class="waves-effect" href="/how" ><i class="material-icons">record_voice_over</i>How to SOLE</a></li>
-        <li><a class="waves-effect" href="/history" ><i class="material-icons">history</i>History of StartSOLE</a></li>
-        <li><a class="waves-effect" href="/profile"><i class="material-icons">account_circle</i>Profile</a></li>
-        <li><a class="waves-effect" href="/"><i class="material-icons">exit_to_app</i>Logout</a></li>
-
-        <li><div class="divider"></div></li>
         <li><a class="waves-effect waves-light btn" href="/sole-create">Plan Lesson</a></li>
         <li><div class="divider"></div></li>
+        <li><a class="waves-effect" href="/profile"><i class="material-icons">account_circle</i>My Profile</a></li>
+        <li><a class="waves-effect" href="/soles"><i class="material-icons">format_list_bulleted</i>My SOLEs</a></li>
+        <li><div class="divider"></div></li>
+        <li><a class="waves-effect" href="/questions"><i class="material-icons">help</i>Explore Questions</a></li>
+        <li><a class="waves-effect" href="/questions/add"><i class="material-icons">create</i>Add a Question</a></li>
+        <li><div class="divider"></div></li>
+        {{!-- <li><a class="waves-effect" href="/map"><i class="material-icons">public</i>Community Map</a></li> --}}
+        <li><a class="waves-effect" href="/how" ><i class="material-icons">record_voice_over</i>How to SOLE</a></li>
+        <li><a class="waves-effect" href="/history" ><i class="material-icons">history</i>History of StartSOLE</a></li>
+        <li><a class="waves-effect" href="/resources"><i class="material-icons">assignment</i>Teacher Resources<span class="new badge">4</span></a></li>
+        <li><div class="divider"></div></li>
+        <li><a class="waves-effect waves-light btn red" href="/logout"><!--<i class="material-icons">exit_to_app</i>-->Logout</a></li>
+        <li><div class="divider"></div></li>
+
         <li>
             <div class="app-download-links">
                 <a href="https://itunes.apple.com/us/app/startsole-self-organized-learning-environment/id1097411683?mt=8"><img src="/images/app.png">
